toolkit/toolkit-looknfeel/src/main/less/skins/default/views/analytics/report.less
// REPORT LISTING PAGE
.page_reportlisting{
	&admin{
		&ext{
			.screenshotReportLink{
				.hideText();
				img{
					max-width: 100%;
				}
			}
			.tables_panel {
				.table .thead .th{
					&.th_description{
						display: @reportListAdmin-header-description-display;
					}
				}
				.table .tbody .tr {
					position: relative;
					.td{
						overflow: hidden;
						text-overflow: ellipsis;
						white-space: nowrap;
						.boxSizing();
						&.td_{
							&name{
								width: @reportListAdmin-displayname-width;
								margin : @reportListAdmin-displayname-margin;
							}
							&description  {
								top: @reportListAdmin-description-top;
								left: @reportListAdmin-description-left;
								color: @processList-description-textColor;
								.fontSize(@reportListAdmin-description-fontSize);
								position: @reportListAdmin-description-position;
								width: @reportListAdmin-description-width;
								text-overflow: ellipsis;
								white-space: nowrap;
							}
						}
					}
				}
			}
		}
	}
}

// REPORT MORE DETAIL
.report{
	a, a span{
		color: @color3;
	}
	table{
		width:100%;
		vertical-align:top !important;
		div, tr, td{
			overflow: hidden;
			height: inherit;
		}
		td, th{
			display: table-cell !important;
			vertical-align: middle;
			float: none !important;
		}
	}
	td.bonita_report_title {
		.moreDetails_title();
		padding: 0;
		margin: 0 0 20px 0;
		display: block;
	}
	
	.bonita_report_text{
		.label();
	}
	.bonita_report_description{
		.moreDetails_description();
	}
	
	.bonita_report_section_title{
		.moreDetails_section_title();
		padding: 0;
		margin: 0 0 20px 0;
		display: block;
		font-size: 184.6153846153846%;
	}
	
	.bonita_report_parameter_label{
		.label();
	}
	
	.bonita_report_table_header{
		.table_header();
	}
	
	.bonita_report_table_line{
		.table_line();
	}
	
	.bonita_report_hyperlink{
		.pointerAsLink();
		.hoverUnderline();
		a{
			display:block;
			float:left;
		}
		overflow: hidden;
	}
	
	.bonita_report_shape_line{
		.section_border();
	}
	
	.exportCell{
		a{
			.skinButton(@btnColor, @btnTxtColor, @btnTxtStrokeColor);
			float: right;
		}
	}
	form#report-form{
		max-width: 100% !important;
		#p_date_{
			&from,&to{
				float: right;
				margin-bottom: 5px;
				width: 110px;
			}
		}
		#form-report-ipt-dr-p_date{
			 > div {
				clear: both;
				width: 150px;
			}	
			span {
				float: left;
			}
		}
		.report-form {
			text-align: left;
		}
        
		.formentries {
            .buttons {
                width: 100%;
                text-align: center;
                .btn {
                    height: 100%;
                }
            }
            
            .formentry {
                height: auto;
                float: left;
                width: 250px;
                margin: 5px;
                
                &.select .input select{
                    background: none repeat scroll 0 0 transparent;
                    border: 0 none;
                    border-radius: 0 0 0 0;
                    font-family: inherit;
                    font-size: inherit;
                    padding: 4px 5px;
                    width: 120%;
                }
            }  
        } 
	}
	/////////////////////////////////////////////////////////////////////////////////////////////////
	// CHARLY REPORT CSS IMPLEMENTATION
	/////////////////////////////////////////////////////////////////////////////////////////////////
	
	.table_report {
		-moz-box-sizing: border-box;
		border: 1px solid #C2C2C2;
		box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.17);
		display: table;
		float: none;
		table-layout: fixed;
		width: 100%;
		word-wrap: break-word;
		border-radius: 5px 5px 5px 5px;
	}
	
	.table_report .thead {
		border-collapse: separate;
	    color: #363637;
	    display: table-header-group;
	    float: none;
	    width: 100%;
	}
	.table_report tr{
		display:none;
	}
	.table_report .thead tr.tr{
		background: linear-gradient(to bottom, #FFFFFF 0%, #F7F7F7 100%) repeat scroll 0 0 transparent;
	    display: table-row;
	    float: none;
	    
	    /* chrome */
	    background: -webkit-gradient(linear, center top, center bottom, from(#FFFFFF), to(#F7F7F7));
	
	}
	.table_report .thead .tr .th_1:before {
		display: none;
	}
	
	.table_report .thead .tr .th_last:before {
		display: none;
	}
	.table_report .thead .tr .th {
		border-left: 1px solid #D9D9D9;
	    content: "";
	    display: block;
	    margin: -5px 0 0 -20px;
	    position: absolute;
	    width: 0;
	    display: table-cell;
	    float: none;
	    height: 20px;
	    padding: 5px;
	    position: relative;
		text-align: left;
        vertical-align: middle;
	}
    
    .table_report .huge-table-header {
        font-size: 120%;
    }
    
    .table_report .big-table-header {
        font-size: 110%;
    }
		
	.table_report .tbody {
		display: table-row-group;
	    float: none;
	    width: 100%;
	}
	
	.table_report .tbody tr.tr {
		display: table-row;
	    float: none;
	    width: 100%;
	}
	
	.table_report .tbody .tr .td {
		border: 1px solid #EDEDED;
	    display: table-cell;
	    float: none;
	    padding: 5px;
	    vertical-align: middle;
	}
	
	.table_report .tbody .tr .td a{
		color: #6E6F6B;
	}
}

